refactor(christmas): 구조 수정 및 상수화